--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/heatmap.js"></script>
     <script src="config.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <script>
     System.import('app')
